# Asmr-Curator

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  dev.bat  dev.sh  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: block-dangerous-commands.sh  protect-files.sh  scan-secrets.sh
.claude/rules/: architecture.md  code-quality.md  database.md  error-handling.md  frontend.md  project-workflow.md  release-prep.md  security.md
.claude/skills/ship/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_check.yml  migrate-legacy-tags.yml  release-extension.yml  release.yml
.impeccable/: design.json
backend/: .gitignore  audio_metadata.py  audio_utils.py  database.py  drive_fetch.py  main.py  patreon_fetch.py  pyproject.toml  requirements.txt
backend/routes/: convert.py  dictionary.py  extract.py  files.py  patreon.py  settings.py  system.py
backend/tests/: conftest.py  test_audio_utils.py  test_bulk_edit.py  test_convert.py  test_database.py  test_dictionary_routes.py  test_drive_fetch.py  test_file_ops.py  test_patreon_fetch.py  test_patreon_route.py  test_properties.py
extension/: CHANGELOG.md  README.md  background.js  content_script.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/__tests__/: semver.test.js
extension/lib/: post-id.js  semver.js  storage.js  url-clean.js
frontend/: .prettierignore  .prettierrc.json  app.js  eslint.config.js  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AsyncButton.tsx  BulkEditSheet.tsx  ConversionPanel.tsx  CookiesModal.tsx  CookiesSheet.tsx  CopyButton.tsx  DatePicker.tsx  DictionaryModal.tsx  EmptyState.tsx  ExternalLinksHint.tsx  FileBrowser.tsx  FileBrowserItem.tsx  FilenameOutput.tsx  Header.tsx  HelpSheet.tsx  LibraryConfigModal.tsx  LibraryExplorerSheet.tsx  LibrarySettingsSheet.tsx  LibrarySubdirPicker.tsx  MoveToLibrarySection.tsx  OCRUploader.tsx  OutputPanel.tsx  ParserTestPane.tsx  PatreonPanel.tsx  PatreonResultRow.tsx  PatreonResultsList.tsx  RecoverableErrorBanner.tsx  RenameSection.tsx  ScreenshotPanel.tsx  SectionLabel.tsx  SelectedFilePanel.tsx  SheetHeaderBar.tsx  StatusBar.tsx  StatusLine.tsx  TagChip.tsx  TagsEditor.tsx  TagsField.tsx  ThemeToggle.tsx
frontend/src/components/dictionary/: CookiePane.tsx  DictionaryTester.tsx  SuppressedPane.tsx  VocabularyPane.tsx
frontend/src/components/selectedFile/: helpers.tsx  utils.ts
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  collapsible.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  slider.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/hooks/: useClipboard.ts  useDragSelect.ts  useMediaQuery.ts
frontend/src/lib/: api.ts  audio-formats.json  audioFormats.ts  constants.ts  explorerSelection.ts  parser.ts  theme.ts  types.ts  utils.ts
frontend/src/lib/__tests__/: explorerSelection.test.ts  parser.properties.test.ts  parser.test.ts  utils.test.ts
scripts/: check_api_docs.py
