[project]
name = "asmr-filename-generator"
version = "1.1.1"
description = "Self-hosted ASMR Workbench — vision LLM extraction, tag dictionary, file rename + ID3, audio conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "playwright==1.59.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
# `testpaths` is relative to the rootdir, which pytest sets to the dir
# containing the configfile when `-c backend/pyproject.toml` is passed.
# That means rootdir == `backend/`, and this entry must be `tests`
# (not `backend/tests`) — otherwise pytest would try to collect from
# `backend/backend/tests` and silently find nothing.
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
