[project]
name = "asmr-curator"
version = "2.0.4"
description = "Self-hosted ASMR Curator: vision LLM extraction, tag dictionary, file rename + ID3, audio conversion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    # Starlette 1.0.0 carries every CVE patch the prior 0.52.1 floor was
    # there for (CVE-2025-54121 + CVE-2025-62727) plus the 0.5x backlog.
    # FastAPI 0.136.1's bound is `starlette>=0.46.0`, open-ended at the
    # top, so the explicit pin no longer needs the narrowed floor.
    "starlette==1.0.0",
    "uvicorn[standard]==0.47.0",
    "playwright==1.60.0",
    # Pinned to match backend/requirements.txt — pyproject.toml drives
    # `uv sync` in the devcontainer; requirements.txt drives the Docker
    # build. Both must list the same direct deps or one path silently
    # misses imports (httpx is in main.py for external-audio streaming
    # + the SSE response client; mutagen writes ID3/FLAC/MP4 tags).
    "httpx==0.28.1",
    "mutagen==1.47.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# Curated rule set — selected for bug-catch value, not pedantry. The
# omitted families (D pydocstyle, ANN annotations, S bandit, TRY, EM, FBT,
# N naming, ERA) are intentionally off: they generate more noise than
# value in this codebase. Revisit if a specific class of bug recurs.
select = [
    "F",      # pyflakes — unused imports, undefined names, real bugs
    "E",      # pycodestyle errors — syntax-adjacent issues
    "W",      # pycodestyle warnings
    "I",      # isort — auto-sortable import order
    "B",      # flake8-bugbear — common bug patterns (mutable defaults, bare except)
    "C4",     # flake8-comprehensions — cleaner list/dict/set comprehensions
    "UP",     # pyupgrade — modern syntax (Optional[X] → X | None, etc.)
    "SIM",    # flake8-simplify — clearer control flow
    "RUF",    # ruff-specific catches
    "PIE",    # flake8-pie cleanups
]
ignore = [
    "E501",   # line too long — Ruff's formatter handles wrapping
    "B008",   # function call in default arg — required by FastAPI's Depends()
    "B904",   # raise-without-from-inside-except — project pattern intentionally
              # doesn't chain HTTPException to internal exceptions so error
              # bodies returned to clients don't leak internal stack frames
              # (security.md: never expose stack traces or internal paths)
    "SIM108", # use ternary instead of if/else — sometimes less readable
    "SIM117", # combine nested with-statements — sometimes hurts readability
    "RUF012", # mutable class attributes — sometimes intentional
    "RUF001", # ambiguous unicode chars in strings — false-positive on em-dashes in our copy
    "RUF002", # ambiguous unicode chars in docstrings — same
    "RUF003", # ambiguous unicode chars in comments — same
]

[tool.ruff.lint.per-file-ignores]
# Tests can be looser about a few patterns:
"tests/**" = [
    "B011",   # assert False — pytest tests use it
    "SIM117", # nested with-statements — pytest fixture nesting reads fine
]

[tool.ruff.format]
# Defaults are fine: 4-space indent, line-length=100 (inherited), double
# quotes, magic trailing comma respected.


[tool.pytest.ini_options]
# `testpaths` is relative to the rootdir, which pytest sets to the dir
# containing the configfile when `-c backend/pyproject.toml` is passed.
# That means rootdir == `backend/`, and this entry must be `tests`
# (not `backend/tests`) — otherwise pytest would try to collect from
# `backend/backend/tests` and silently find nothing.
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Add the repo root to sys.path so tests can `from backend.X import ...`.
# `pythonpath` entries resolve relative to rootdir (= `backend/`), so `..`
# is the repo root. The devcontainer sets PYTHONPATH separately, but CI
# does not, and without this entry pytest collection fails with
# `ModuleNotFoundError: No module named 'backend'`.
pythonpath = [".."]

[tool.coverage.run]
# Measure the backend package; tests + __pycache__ are excluded from the
# scope so the report reflects production-code coverage, not test-file
# self-coverage. `source` is relative to where pytest is invoked (repo
# root in both local devcontainer + CI).
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/__pycache__/*",
    "backend/.venv/*",
]

[tool.coverage.report]
# `skip_covered = false` keeps every file in the terminal table so dips
# are obvious. `precision = 1` because integer percentages hide small
# regressions when the codebase is small.
precision = 1
show_missing = true
skip_covered = false
